# openf1-mcp

./: .gitignore  Dockerfile  INSTALLATION.md  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  setup.py  test_installation.py  tsconfig.json
openf1_mcp/: __init__.py  cli.py  interface.py  server.py
openf1_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: http-server.ts  index.ts  server.ts  tools.ts  types.ts
src/tools/: car-data.ts  drivers.ts  intervals.ts  laps.ts  location.ts  meetings.ts  pit.ts  position.ts  race-control.ts  sessions.ts  stints.ts  team-radio.ts  weather.ts
