[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openf1-mcp"
version = "0.1.0"
description = "Model Context Protocol server for OpenF1 Formula 1 API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = []

[project.scripts]
openf1-mcp = "openf1_mcp.interface:main"

[project.urls]
Homepage = "https://github.com/yourusername/openf1-mcp"
Repository = "https://github.com/yourusername/openf1-mcp"
Issues = "https://github.com/yourusername/openf1-mcp/issues"

[tool.setuptools.packages.find]
include = ["openf1_mcp*"]

[tool.setuptools.package-data]
openf1_mcp = ["build/**/*"] 